--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
