--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.5",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
