add order creation

--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "country-list": "^2.3.0",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
+    "libphonenumber-js": "^1.11.7",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-phone-number-input": "^3.4.5",
     "tailwind-merge": "^2.4.0",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
