--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "country-list": "^2.3.0",
+    "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
     "libphonenumber-js": "^1.11.7",
