--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate-types": "curl https://admin.redcrow.kz/wp-json -o schema.yaml && yarn run openapi --input ./schema.yaml --output ./src/types/generated --exportServices=false --exportCore=false --useUnionTypes"
   },
   "dependencies": {
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@mantine/form": "^7.12.1",
@@ -22,22 +23,27 @@
     "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
+    "i": "^0.3.7",
     "libphonenumber-js": "^1.11.7",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
+    "npm": "^10.8.2",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.5",
+    "robokassa-gate": "^1.1.1",
     "tailwind-merge": "^2.4.0",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/country-list": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "openapi-typescript-codegen": "^0.29.0",
