--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.4.5",
     "robokassa-gate": "^1.1.1",
     "tailwind-merge": "^2.4.0",
