--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap",
-    "postbuild": "next-sitemap",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate-types": "curl https://admin.redcrow.kz/wp-json -o schema.yaml && yarn run openapi --input ./schema.yaml --output ./src/types/generated --exportServices=false --exportCore=false --useUnionTypes"
@@ -28,7 +27,7 @@
     "libphonenumber-js": "^1.11.7",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
-    "next-sitemap": "^4.2.3",
+    "node-fetch": "^3.3.2",
     "npm": "^10.8.2",
     "query-string": "^9.1.0",
     "react": "^18",
@@ -37,6 +36,7 @@
     "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.4.5",
     "robokassa-gate": "^1.1.1",
+    "sitemap": "^8.0.0",
     "tailwind-merge": "^2.4.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
