--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.3.24",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.11.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
     "node-fetch": "^3.3.2",
