--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@mantine/form": "^7.12.1",
+    "@mantine/hooks": "^7.13.2",
     "@tanstack/react-query": "^5.51.23",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.5",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
