--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "libphonenumber-js": "^1.11.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.426.0",
-    "next": "14.2.5",
+    "next": "^14.2.15",
     "node-fetch": "^3.3.2",
+    "node-robokassa": "^0.0.0",
     "npm": "^10.8.2",
     "query-string": "^9.1.0",
     "react": "^18",
