--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "libphonenumber-js": "^1.11.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.426.0",
+    "mailgun.js": "^10.2.3",
     "next": "^14.2.15",
     "node-fetch": "^3.3.2",
     "node-robokassa": "^0.0.0",
