Carousel fix + Filters offset

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.4.5",
+    "react-slick": "^0.30.3",
     "robokassa-gate": "^1.1.1",
     "sitemap": "^8.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
@@ -50,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
