working on cdek - referal completed

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "country-list": "^2.3.0",
     "dayjs": "^1.11.13",
+    "example-project-structure": "github:disa4148/cdek-widget-3.0",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
     "i": "^0.3.7",
@@ -29,13 +30,13 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.426.0",
     "mailgun.js": "^10.2.3",
-    "next": "^14.2.15",
+    "next": "^15.2.4",
     "node-fetch": "^3.3.2",
     "node-robokassa": "^0.0.0",
     "npm": "^10.8.2",
     "query-string": "^9.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.4.5",
@@ -55,7 +56,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^15.2.4",
     "openapi-typescript-codegen": "^0.29.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
