delivery address map

--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "clsx": "^2.1.1",
     "country-list": "^2.3.0",
     "dayjs": "^1.11.13",
-    "example-project-structure": "github:disa4148/cdek-widget-3.0",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.24",
     "i": "^0.3.7",
     "ioredis": "^5.7.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "libphonenumber-js": "^1.11.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.426.0",
@@ -34,11 +35,12 @@
     "next": "^15.2.4",
     "node-fetch": "^3.3.2",
     "node-robokassa": "^0.0.0",
-    "npm": "^10.8.2",
+    "npm": "^11.7.0",
     "query-string": "^9.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^9.0.1",
     "react-phone-number-input": "^3.4.5",
     "react-slick": "^0.30.3",
@@ -52,6 +54,7 @@
   "devDependencies": {
     "@types/country-list": "^2.1.4",
     "@types/ioredis": "^5.0.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
