--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # Project Environment
 # ============================================
 # 'staging' for staging, 'production' for production
-PROJECT_ENV = 'staging'
+PROJECT_ENV = 'production'
 
 # ============================================
 # Application URLs
@@ -29,10 +29,12 @@ REDIS_PASSWORD = ''
 # ============================================
 # SMTP Configuration
 # ============================================
-SMTP_SERVER = 'redcrow.org.kz'
+SMTP_HOST = 'redcrow.org.kz'
 SMTP_PORT = 465
 SMTP_USER = 'info@redcrow.org.kz '
-SMTP_PASSWORD = 'bT505*j3y'
+SMTP_PASS = 'bT505*j3y'
+SMTP_FROM_NAME = "RedCrow"
+
 
 
 
